# sshift

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: release-mac.mjs
src/: App.tsx  index.css  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: file_commands.rs  host_commands.rs  mod.rs  session_commands.rs  settings_commands.rs  transfer_commands.rs  vault_commands.rs
src-tauri/src/domain/entities/: mod.rs
src-tauri/src/domain/repositories/: mod.rs
src-tauri/src/domain/usecases/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/persistence/: credential_store.rs  mod.rs
src-tauri/src/infrastructure/ssh/: mod.rs  sftp_client.rs  sftp_worker.rs  ssh_client.rs  ssh_manager.rs
src-tauri/src/tests/: file_tests.rs  mod.rs  ssh_tests.rs
src/application/hooks/: index.ts  useAIAgent.test.ts  useAIAgent.ts  useFileExplorer.ts  useHost.test.ts  useHost.ts  useSession.test.ts  useSession.ts  useVault.ts
src/application/stores/: aiStore.ts  hostStore.ts  index.ts  sessionStore.ts  settingsStore.ts  terminalStore.ts  transferStore.ts  uiStore.ts  vaultStore.ts
src/config/: constants.ts  index.ts
src/domain/entities/: AIMessage.ts  FileEntry.ts  Host.ts  Session.ts  Settings.ts  Transfer.ts  VaultEntry.ts  index.ts
src/domain/repositories/: IFileRepository.ts  index.ts  (+3 more)
src/infrastructure/: passphraseCache.ts  repositories.ts
(+70 files in other folders)
